--- a/pages/introduction.mdx
+++ b/pages/introduction.mdx
@@ -24,18 +24,18 @@ NLPearl.AI is at the forefront of transforming telecommunications with advanced 
 
 <CardGroup cols={2}>
   <Card
-    title="Advanced AI Agents"
-    icon="robot"
-    href="/docs/ai-agents"
+    title="Overview"
+    icon="compass"
+    href="/pages/overview"
   >
-    Discover how our AI agents can revolutionize your customer interactions.
+    Get an overview of how NLPearl.AI works and what it can do for you.
   </Card>
   <Card
-    title="Integration Process"
-    icon="puzzle-piece"
-    href="/docs/integration"
+    title="Create Your Pearl"
+    icon="gem"
+    href="/pages/create_pearl"
   >
-    Learn about the seamless integration of our AI technology into your workflows.
+    Learn how to create a Pearl, the core of your AI-driven conversations.
   </Card>
 </CardGroup>
 
@@ -45,18 +45,18 @@ Kickstart your journey with NLPearl.AI by exploring the core features of our AI 
 
 <CardGroup cols={2}>
   <Card
-    title="Setup Your AI"
-    icon="cogs"
-    href="/docs/setup"
+    title="API Quick Start"
+    icon="rocket"
+    href="/api-reference/api_quickstart"
   >
-    Begin by setting up your AI agents and customizing them according to your needs.
+    Start integrating our API with this quick start guide.
   </Card>
   <Card
-    title="Voice & Language"
-    icon="volume-up"
-    href="/docs/voice-language"
+    title="Custom Pearl"
+    icon="sitemap"
+    href="/pages/custom_pearl"
   >
-    Explore the variety of voices and languages supported by our AI.
+    Dive into creating custom conversational flows with our advanced options.
   </Card>
 </CardGroup>
 
@@ -66,18 +66,18 @@ Expand your knowledge on optimizing AI interactions to achieve superior customer
 
 <CardGroup cols={2}>
   <Card
-    title="Optimize Interactions"
-    icon="chart-line"
-    href="/docs/optimization"
+    title="Actions"
+    icon="hand-pointer"
+    href="/pages/action"
   >
-    Learn strategies for optimizing AI-driven interactions.
+    Discover the powerful actions your AI can perform during and after calls.
   </Card>
   <Card
-    title="Compliance and Security"
-    icon="shield-alt"
-    href="/docs/compliance"
+    title="Calls & Analytics"
+    icon="chart-bar"
+    href="/pages/calls"
   >
-    Understand our commitment to security and compliance in AI deployments.
+    Analyze call data and measure the success of your AI interactions.
   </Card>
 </CardGroup>
 
@@ -88,9 +88,9 @@ Join our community for updates, support, and knowledge sharing with industry exp
 <CardGroup cols={1}>
   <Card
     title="Join Our LinkedIn Community"
-    icon="users"
-    href="https://community.nlppearl.ai"
+    icon="linkedin"
+    href="https://www.linkedin.com/company/nlpearl/mycompany/"
   >
-    Connect with experts and peers in our dedicated forum for continuous learning and support.
+    Connect with experts and peers in our dedicated LinkedIn community for continuous learning and support.
   </Card>
 </CardGroup>
