--- a/api-reference/api_quickstart.mdx
+++ b/api-reference/api_quickstart.mdx
@@ -30,38 +30,18 @@ Your Account ID is required for API authentication. You can find your Account ID
 
 ### Step 4: Set Up API Authentication
 
-To authenticate your API requests, you need to include your Account ID and API secret key in the header of each request. Use the following format for the bearer authentication header:
+To authenticate your API requests, you need to include your Account ID and API secret key in the header of each request. Check On The Authorisation Guide:
 
-Authorization: Bearer AccountId
-
-### Example API Request
-
-Here’s an example of how to set up the authentication header for an API request using cURL:
-
-```
-curl -X GET "https://api.nlpearl.ai/v1/endpoint" \
-     -H "Authorization: Bearer YourAccountId:YourSecretKey"
-```
-Ensure that you replace YourAccountId and YourSecretKey with your actual Account ID and API secret key.
-
-You're All Set!
-With your subscription selected, API secret key created, and Account ID found, you are ready to start using the NLPearl.AI API. Explore the API documentation to learn more about the available endpoints and how to integrate NLPearl.AI into your applications.
 
 <CardGroup cols={2}>
+ 
   <Card
-    title="API Reference"
-    icon="code"
-    href="/docs/api-reference"
-  >
-    Dive into the details of using the NLPearl.AI API.
-  </Card>
-  <Card
-    title="Authentication Guide"
+    title="Authorisation Guide"
     icon="key"
-    href="/docs/api-authentication"
+    href="/api-reference/authorisation"
   >
     Learn more about setting up and managing API authentication.
   </Card>
 </CardGroup>
-Conclusion
+## Conclusion
 Starting with the NLPearl.AI API is easy and straightforward. By following these steps, you can quickly set up your account and begin integrating powerful AI capabilities into your applications.
