--- a/pages/overview.mdx
+++ b/pages/overview.mdx
@@ -9,12 +9,6 @@ import { CardGroup, Card } from '/snippets';
 
 Welcome to NLPearl.AI, where we redefine the future of telecommunications with state-of-the-art conversational AI. Our platform empowers businesses to elevate their customer interactions, drive efficiency, and enhance productivity through sophisticated AI-driven phone agents.
 
-<img
-  className="block"
-  src="/images/overview_hero.png"
-  alt="NLPearl.AI Overview"
-/>
-
 ### Transforming Customer Engagement
 
 At NLPearl.AI, we understand the importance of seamless customer engagement. Our AI agents are designed to handle both inbound and outbound calls with a level of sophistication that mirrors human interaction but with unmatched consistency and scalability.
@@ -28,15 +22,15 @@ At NLPearl.AI, we understand the importance of seamless customer engagement. Our
 <CardGroup cols={2}>
   <Card
     title="Inbound Activities"
-    icon="phone-incoming"
-    href="/docs/inbound"
+    icon="phone"
+    href="/pages/inbound"
   >
     Learn how to set up and optimize inbound activities to enhance customer service.
   </Card>
   <Card
     title="Outbound Campaigns"
-    icon="phone-outgoing"
-    href="/docs/outbound"
+    icon="phone-alt"
+    href="/pages/outbound"
   >
     Discover the power of outbound campaigns to boost your sales and engagement.
   </Card>
@@ -55,17 +49,17 @@ We believe in providing flexibility and control to our users. NLPearl.AI allows 
 <CardGroup cols={2}>
   <Card
     title="Create Pearl"
-    icon="magic"
-    href="/docs/create_pearl"
+    icon="gem"
+    href="/pages/create_pearl"
   >
     Step-by-step guide to creating and customizing your Pearl.
   </Card>
   <Card
-    title="Voice Management"
-    icon="microphone"
-    href="/docs/voice-management"
+    title="Custom Pearl"
+    icon="sitemap"
+    href="/pages/custom_pearl"
   >
-    Explore how to manage and customize the voices of your AI agents.
+    Explore advanced customization options for more complex conversational flows.
   </Card>
 </CardGroup>
 
@@ -81,16 +75,16 @@ Stay ahead with real-time analytics and insights into your call activities. Our 
 
 <CardGroup cols={2}>
   <Card
-    title="Real-Time Monitoring"
+    title="Calls & Analytics"
     icon="chart-bar"
-    href="/docs/real-time-monitoring"
+    href="/pages/calls"
   >
     Access and analyze real-time data on your call activities.
   </Card>
   <Card
     title="Detailed Reports"
     icon="file-alt"
-    href="/docs/reports"
+    href="/pages/reports"
   >
     Generate detailed reports to gain deeper insights into your operations.
   </Card>
@@ -110,14 +104,14 @@ NLPearl.AI is designed to integrate seamlessly with your existing systems, ensur
   <Card
     title="API Integration"
     icon="code"
-    href="/docs/api-integration"
+    href="/pages/outbound_api"
   >
     Learn how to integrate NLPearl.AI with your existing systems.
   </Card>
   <Card
     title="Security and Compliance"
     icon="shield-alt"
-    href="/docs/compliance"
+    href="/pages/billing"
   >
     Understand our commitment to security and compliance.
   </Card>
@@ -126,4 +120,3 @@ NLPearl.AI is designed to integrate seamlessly with your existing systems, ensur
 ## Conclusion
 
 NLPearl.AI offers a comprehensive solution for transforming your telecommunications operations with advanced conversational AI. By leveraging our platform, you can enhance customer engagement, drive sales, and achieve operational excellence. Explore our documentation to get started and unlock the full potential of NLPearl.AI.
-
