--- a/pages/getting_started.mdx
+++ b/pages/getting_started.mdx
@@ -9,12 +9,6 @@ import { CardGroup, Card } from '/snippets';
 
 Welcome to NLPearl.AI! We're excited to have you onboard. This guide will walk you through the steps from registration to utilizing the full potential of our platform, including creating Pearls, managing activities, and understanding our billing system.
 
-<img
-  className="block"
-  src="/images/getting_started.png"
-  alt="Getting Started with NLPearl.AI"
-/>
-
 ### Registration and Initial Setup
 
 When you first register on our platform, we offer a few complimentary minutes and the ability to create Pearls to test a few calls. This allows you to get a feel for our system without any initial commitment.
@@ -60,14 +54,14 @@ Once you exhaust your credits, your account will go through two stages:
   <Card
     title="Subscription Plans"
     icon="credit-card"
-    href="/docs/subscription-plans"
+    href="https://nlpearl.ai/pricing/"
   >
     Learn more about our subscription plans and choose the best one for your needs.
   </Card>
   <Card
     title="Billing and Credits"
     icon="dollar-sign"
-    href="/docs/billing"
+    href="/pages/billing"
   >
     Understand how our billing system works and how to manage your credits.
   </Card>
