--- a/pages/overview.mdx
+++ b/pages/overview.mdx
@@ -21,15 +21,15 @@ At NLPearl.AI, we understand the importance of seamless customer engagement. Our
 
 <CardGroup cols={2}>
   <Card
-    title="Inbound Activities"
+    title="Inbounds"
     icon="phone"
     href="/pages/inbound"
   >
     Learn how to set up and optimize inbound activities to enhance customer service.
   </Card>
   <Card
-    title="Outbound Campaigns"
-    icon="phone-alt"
+    title="Outbounds"
+    icon="square-phone-flip"
     href="/pages/outbound"
   >
     Discover the power of outbound campaigns to boost your sales and engagement.
@@ -73,7 +73,7 @@ Stay ahead with real-time analytics and insights into your call activities. Our 
 - **Lead Conversion Rates**: Monitor how effectively your campaigns are converting leads into customers.
 - **Agent Efficiency**: Analyze the efficiency of your AI agents to ensure optimal performance.
 
-<CardGroup cols={2}>
+<CardGroup cols={1}>
   <Card
     title="Calls & Analytics"
     icon="chart-bar"
@@ -81,42 +81,5 @@ Stay ahead with real-time analytics and insights into your call activities. Our 
   >
     Access and analyze real-time data on your call activities.
   </Card>
-  <Card
-    title="Detailed Reports"
-    icon="file-alt"
-    href="/pages/reports"
-  >
-    Generate detailed reports to gain deeper insights into your operations.
-  </Card>
+  
 </CardGroup>
-
-### Seamless Integration and Security
-
-NLPearl.AI is designed to integrate seamlessly with your existing systems, ensuring a smooth transition and minimal disruption. We prioritize security and compliance, ensuring that your data is protected at all times.
-
-#### Integration and Security Highlights
-
-- **Easy Integration**: Our API allows for seamless integration with your current CRM and call management systems.
-- **Robust Security**: We adhere to industry-leading security standards to protect your data.
-- **Compliance**: Ensure compliance with all relevant regulations, including GDPR and HIPAA.
-
-<CardGroup cols={2}>
-  <Card
-    title="API Integration"
-    icon="code"
-    href="/pages/outbound_api"
-  >
-    Learn how to integrate NLPearl.AI with your existing systems.
-  </Card>
-  <Card
-    title="Security and Compliance"
-    icon="shield-alt"
-    href="/pages/billing"
-  >
-    Understand our commitment to security and compliance.
-  </Card>
-</CardGroup>
-
-## Conclusion
-
-NLPearl.AI offers a comprehensive solution for transforming your telecommunications operations with advanced conversational AI. By leveraging our platform, you can enhance customer engagement, drive sales, and achieve operational excellence. Explore our documentation to get started and unlock the full potential of NLPearl.AI.
