--- a/pages/getting_started.mdx
+++ b/pages/getting_started.mdx
@@ -18,7 +18,7 @@ When you first register on our platform, we offer a few complimentary minutes an
 During the trial phase, you can:
 
 - **Create Pearls**: Set up your conversational flows and test a few calls to understand how our AI agents operate.
-- **Complimentary Minutes**: Utilize the free minutes provided to make initial test calls.
+- **Complimentary Minutes**: Utilize the included minutes provided to make initial test calls.
 
 However, note that at this stage, access to full inbound and outbound activities is restricted. To unlock the complete range of features, you need to subscribe to a plan.
 
@@ -27,21 +27,23 @@ However, note that at this stage, access to full inbound and outbound activities
 Once you subscribe to a plan, you unlock the full potential of the NLPearl.AI platform. Here's what you get:
 
 - **Full Access to Activities**: Engage in both inbound and outbound activities with no restrictions.
-- **Free Agents**: Receive a number of free concurrent agents based on your subscription plan, which will be automatically available for your activities.
-- **Free US Phone Numbers**: Depending on your plan, you will also receive free US phone numbers.
-- **Additional Free Minutes**: Your subscription plan includes additional free minutes to use for calls.
+- **Included Agents**: Receive a number concurrent agents based on your subscription plan, which will be automatically available for your activities.
+- **Included US Phone Numbers**: All our plans include at least one free US number.
+- **Included Minutes**: Each plan comes with a set of call minutes included.
 
-### Using Your Minutes and Credits
+### Credits and Minutes Usage
 
-All calls you make will deduct from your available free minutes. Once the free minutes are exhausted, you will need to use credits to continue making calls. 
+Each minute of your calls will be deducted from the minutes included in your plan. Once the minutes are exhausted, your credits are being used.\n\n
+Credits can also be used to purchase additional agents or phone numbers if you have sufficient balance.
 
-#### Auto-Recharge Feature
+#### Auto-Recharge
 
-To ensure uninterrupted activities, we recommend activating the auto-recharge feature. This automatically recharges your account to a target balance when it falls below a defined threshold, ensuring your operations never stop due to insufficient funds.
+To ensure uninterrupted service, we recommend activating the auto-recharge feature, in order to add credit to your account. You can find it in the
+[Billing Section](https://platform.nlpearl.ai/app/settings/billing) under the Settings Page. This will automatically top up your account to a target balance when it falls below a defined threshold, ensuring your operations continue smoothly without any disruptions due to insufficient funds.
 
 ### Pricing and Credits
 
-The price for additional minutes varies based on your subscription plan. Credits can also be used to purchase additional agents or phone numbers if you have sufficient balance.
+The price for additional minutes varies based on your subscription plan.
 
 ### Managing Your Credits
 
@@ -66,8 +68,3 @@ Once you exhaust your credits, your account will go through two stages:
     Understand how our billing system works and how to manage your credits.
   </Card>
 </CardGroup>
-
-## Conclusion
-
-NLPearl.AI offers a powerful and flexible platform for managing your telecommunications needs. By understanding our subscription plans, utilizing your free minutes and credits wisely, and managing your account effectively, you can make the most of our advanced AI capabilities. Welcome to the future of conversational AI with NLPearl.AI!
-
