--- a/pages/create_pearl.mdx
+++ b/pages/create_pearl.mdx
@@ -1,17 +1,13 @@
 ---
 title: Create Your Pearl
-description: 'Learn how to create and customize your Pearl for personalized conversational flows in NLPearl.AI.'
+description: 'First it is important to understand that the process of creating your phone agent is divided into two parts: the first part involves creating and customizing your Pearl for personalized conversational flows in NLPearl.AI, and the second part focuses on setting up your inbound or outbound campaign that will utilize your Pearl. Let’s start by explaining and detail the first part of this process.'
 ---
 
 import { CardGroup, Card } from '/snippets';
 
-## Overview of a Pearl
-
-Creating a Pearl in NLPearl.AI involves setting up a customized conversational flow that defines the behavior of your AI agents during interactions. This process allows you to tailor how your AI engages with customers, ensuring that conversations are both natural and effective.
-
 ### What is a Pearl?
 
-A Pearl in NLPearl.AI represents the core structure of your conversational AI's interaction logic. It includes all necessary components to make the conversation as human-like as possible.
+Creating a Pearl is similar to hiring a new employee. You choose its language, character, and provide a script that explains how it should interact with customers, guiding its actions, knowledge, and responses.
 
 ### Step-by-Step Guide to Creating a Pearl
 
@@ -50,7 +46,8 @@ For more details on actions, refer to the [Actions](actions) page.
 
 1. **Name of the Pearl**: Assign a friendly name to your Pearl for easy retrieval.
 2. **Choose Your Pearl**: Select a logo for your Pearl from a list of available options.
-3. **Define the Success of Your Pearl**: Specify what constitutes a successful call for your Pearl, such as booking a meeting, obtaining client interest, or qualifying a lead.
+3. **Define the Success of Your Pearl**: Specify what constitutes a successful call for your Pearl, such as booking a meeting, obtaining client interest, or qualifying a lead.\n\n
+This defined success will be reflected in the status of your leads list when you launch a campaign,  allowing you to effectively sort and manage your leads.
 
 <CardGroup cols={2}>
   <Card
