--- a/pages/calls.mdx
+++ b/pages/calls.mdx
@@ -1,27 +1,21 @@
 ---
 title: Calls/Analytics
-description: 'Learn how to define, collect, and analyze conversation data and success metrics with NLPearl.AI.'
+description: ' When you click on a call row, you can access various details.\n\nAt NLPearl.AI we offer robust analytics features to help you gain insights into your conversations. When you create a Pearl, you can define the flow of your interactions, specify the information to be collected about the leads, and set success criteria to evaluate the effectiveness of your calls.'
 ---
 
 import { CardGroup, Card } from '/snippets';
 
-## Calls and Analytics
-
-NLPearl.AI offers robust analytics features to help you gain insights into your conversations. When you create a Pearl, you can define the flow of your interactions, specify the information to be collected about the leads, and set success criteria to evaluate the effectiveness of your calls.
 
 
-### Defining Call Flow and Data Collection
+### Data Collection & Success Metrics
 
 When setting up a Pearl, you have the flexibility to define various aspects of the call:
 
-- **Conversation Flow**: Create a structured flow for your AI to follow during the call, ensuring consistent and effective interactions.
 - **Data Collection**: Specify the information you want to collect from the leads during the call. This can include contact details, preferences, and other relevant data.
-
-### Success Metrics
-
-Define what constitutes a successful call for your Pearl. Success metrics can include specific actions taken by the lead, positive responses, or any other criteria relevant to your goals. This allows the system to analyze each call and determine its success rate. 
+- **Success Metrics**:Define what constitutes a successful call for your Pearl. Success metrics can include specific actions taken by the lead, positive responses, or any other criteria relevant to your goals. This allows the system to analyze each call and determine its success rate. 
 
 The success metrics are configured at the final step of creating your Pearl. During this step, you can specify the conditions that define a successful interaction, such as booking a meeting, obtaining client interest, or qualifying a lead. This setup helps in filtering and analyzing the calls that meet your defined success criteria.
+
 <CardGroup cols={1}>
   <Card
     title="Create Pearl"
@@ -39,8 +33,4 @@ After each call, you have access to a comprehensive set of data and tools to rev
 - **Call Transcript**: Access the full transcript of the conversation to review what was said during the call.
 - **Call Recording**: Listen to the recording of the call for a more detailed analysis.
 - **Conversation Summary**: Get a summary of the key points and outcomes of the call.
-
-## Conclusion
-
-By leveraging the calls and analytics features of NLPearl.AI, you can not only manage and review your conversations effectively but also derive actionable insights to enhance your customer interactions and achieve your business objectives.
 
