--- a/pages/custom_pearl.mdx
+++ b/pages/custom_pearl.mdx
@@ -1,17 +1,12 @@
 ---
-title: Custom Your Pearl
+title: Creating a Custom Pearl
 description: 'Learn how to create complex conversational flows with a decision tree in NLPearl.AI.'
 ---
 
 import { CardGroup, Card } from '/snippets';
 
-## Custom Your Pearl
 
 At NLPearl.AI, we offer the option to create more complex conversational flows using a decision tree. This advanced feature allows you to design intricate interaction patterns that can cater to specific needs and scenarios.
-
-### Creating a Custom Pearl
-
-When you choose the custom option, you unlock the ability to create a decision tree. This enables you to develop a more complex flow where the AI agent can handle a variety of situations and actions based on predefined conditions.
 
 ### Decision Tree Flow
 
