--- a/pages/calls.mdx
+++ b/pages/calls.mdx
@@ -1,6 +1,6 @@
 ---
 title: Calls/Analytics
-description: ' When you click on a call row, you can access various details.\n\nAt NLPearl.AI we offer robust analytics features to help you gain insights into your conversations. When you create a Pearl, you can define the flow of your interactions, specify the information to be collected about the leads, and set success criteria to evaluate the effectiveness of your calls.'
+description: ' When you click on a call row, you can access various details.At NLPearl.AI we offer robust analytics features to help you gain insights into your conversations. When you create a Pearl, you can define the flow of your interactions, specify the information to be collected about the leads, and set success criteria to evaluate the effectiveness of your calls.'
 ---
 
 import { CardGroup, Card } from '/snippets';
@@ -12,9 +12,7 @@ import { CardGroup, Card } from '/snippets';
 When setting up a Pearl, you have the flexibility to define various aspects of the call:
 
 - **Data Collection**: Specify the information you want to collect from the leads during the call. This can include contact details, preferences, and other relevant data.
-- **Success Metrics**:Define what constitutes a successful call for your Pearl. Success metrics can include specific actions taken by the lead, positive responses, or any other criteria relevant to your goals. This allows the system to analyze each call and determine its success rate. 
-
-The success metrics are configured at the final step of creating your Pearl. During this step, you can specify the conditions that define a successful interaction, such as booking a meeting, obtaining client interest, or qualifying a lead. This setup helps in filtering and analyzing the calls that meet your defined success criteria.
+- **Success Metrics**:Define what constitutes a successful call for your Pearl. Success metrics can include specific actions taken by the lead, positive responses, or any other criteria relevant to your goals. This allows the system to analyze each call and determine its success rate\n\n This metric appears on the platform as _Conversation Status_. 
 
 <CardGroup cols={1}>
   <Card
