--- a/pages/custom_pearl.mdx
+++ b/pages/custom_pearl.mdx
@@ -1,5 +1,5 @@
 ---
-title: Creating a Custom Pearl
+title: Create a Custom Pearl
 description: 'Learn how to create complex conversational flows with a decision tree in NLPearl.AI.'
 ---
 
