--- a/api-reference/api_quickstart.mdx
+++ b/api-reference/api_quickstart.mdx
@@ -36,7 +36,7 @@ To authenticate your API requests, you need to include your Account ID and API s
 <CardGroup cols={2}>
  
   <Card
-    title="Authorisation Guide"
+    title="Authorization Guide"
     icon="key"
     href="/api-reference/authorisation"
   >
