--- a/pages/action.mdx
+++ b/pages/action.mdx
@@ -22,6 +22,7 @@ In call actions are tasks that Pearl can perform during the conversation. Here a
 - **Transfer a Call**: Pearl can transfer the call to another agent or department.
 - **Send an SMS**: Pearl can send an SMS to the prospect during the call.
 - **Send an Email**: Pearl can send an email to the prospect during the call.
+- **API Integration**: Seamlessly connect your agent with any API to retrieve information or perform actions through any available API.
 
 ### Post Call Actions
 
@@ -30,6 +31,7 @@ Post call actions are tasks that Pearl can perform after the conversation has en
 - **Send an SMS**: Pearl can send a follow-up SMS to the prospect after the call.
 - **Send an Email**: Pearl can send a follow-up email to the prospect after the call.
 - **Take a Message**: If the prospect wants to leave a message, Pearl can take the message and send it to your email.
+
 
 <CardGroup cols={2}>
   <Card
