--- a/pages/languages.mdx
+++ b/pages/languages.mdx
@@ -16,6 +16,7 @@ Currently, you can select from the following languages and accents on the NLPear
 - **French**: French accent
 - **Italian**
 - **German**
+- **Hindi**
 
 ### Determining the Language of the Call
 
