--- a/pages/action.mdx
+++ b/pages/action.mdx
@@ -1,5 +1,5 @@
 ---
-title: Actions
+title: Overview
 description: 'NLPearl.AI provides a range of actions that can be performed by your Pearl both during and after calls. These actions are designed to automate tasks, improve efficiency, and enhance customer interactions.'
 ---
 
