--- a/pages/billing.mdx
+++ b/pages/billing.mdx
@@ -39,19 +39,8 @@ One of the important settings on the Billing page is the auto-recharge option. Y
   <Card
     title="Subscription Plans"
     icon="credit-card"
-    href="/docs/subscription-plans"
+    href="https://nlpearl.ai/pricing/"
   >
     Learn more about the different subscription plans and choose the best one for your needs.
   </Card>
-  <Card
-    title="Manage Invoices"
-    icon="file-invoice"
-    href="/docs/manage-invoices"
-  >
-    Access and manage your billing invoices.
-  </Card>
 </CardGroup>
-
-## Conclusion
-
-Managing your billing settings on NLPearl.AI is straightforward and convenient. By keeping your subscription up-to-date, managing your payment methods, and setting up auto-recharge, you can ensure uninterrupted service and efficient handling of your AI-driven activities.
