--- a/pages/languages.mdx
+++ b/pages/languages.mdx
@@ -17,6 +17,7 @@ Currently, you can select from the following languages and accents on the NLPear
 - **Italian**
 - **German**
 - **Hindi**
+- **Korean**
 
 ### Determining the Language of the Call
 
