--- a/pages/create_pearl.mdx
+++ b/pages/create_pearl.mdx
@@ -3,7 +3,6 @@ title: Create Your Pearl
 description: 'First it is important to understand that the process of creating your phone agent is divided into two parts: the first part involves creating and customizing your Pearl for personalized conversational flows in NLPearl.AI, and the second part focuses on setting up your inbound or outbound campaign that will utilize your Pearl. Let’s start by explaining and detail the first part of this process.'
 ---
 
-import { CardGroup, Card } from '/snippets';
 
 ### What is a Pearl?
 
@@ -40,7 +39,7 @@ Choose the type of use case for your Pearl:
 3. **In Call Actions**: Specify actions that Pearl can perform during the call, such as booking meetings or transferring calls.
 4. **Post Call Actions**: Define actions that Pearl will perform after the call, such as sending follow-up emails or taking messages.
 
-For more details on actions, refer to the [Actions](actions) page.
+For more details on actions, refer to the [Actions](/pages/action) page.
 
 #### Step 5: Pearl Name
 
