--- a/pages/transfer_call.mdx
+++ b/pages/transfer_call.mdx
@@ -6,12 +6,13 @@ description: 'Learn how to use the Transfer Call action in NLPearl.AI to seamles
 
 One of the powerful actions available during a call in NLPearl.AI is the **Transfer Call** feature. This allows your Pearl to transfer a call from itself directly to any phone number you specify.
 
-
 <img
   className="block"
   src="/images/exemples/tranfer_call.png"
   alt="Transfer Call Setup"
+  style={{ borderRadius: '18px' }}
 />
+
 
 ### How to Configure Transfer Call
 
