--- a/pages/calls.mdx
+++ b/pages/calls.mdx
@@ -3,15 +3,14 @@ title: Calls/Analytics
 description: ' When you click on a call row, you can access various details.At NLPearl.AI we offer robust analytics features to help you gain insights into your conversations. When you create a Pearl, you can define the flow of your interactions, specify the information to be collected about the leads, and set success criteria to evaluate the effectiveness of your calls.'
 ---
 
-import { CardGroup, Card } from '/snippets';
-
 
 
 ### Data Collection & Success Metrics
 
 When setting up a Pearl, you have the flexibility to define various aspects of the call:
 
-- **Data Collection**: Specify the information you want to collect from the leads during the call. This can include contact details, preferences, and other relevant data.
+- **Collected Information**: Specify the information you want to collect from the leads during the call. This can include contact details, preferences, and other relevant data.
+	See [Collected Information Variables](/pages/variables#collected-information-variables)
 - **Success Metrics**:Define what constitutes a successful call for your Pearl. Success metrics can include specific actions taken by the lead, positive responses, or any other criteria relevant to your goals. This allows the system to analyze each call and determine its success rate\n\n This metric appears on the platform as _Conversation Status_. 
 
 <CardGroup cols={1}>
@@ -27,7 +26,7 @@ When setting up a Pearl, you have the flexibility to define various aspects of t
 
 After each call, you have access to a comprehensive set of data and tools to review and analyze the conversation:
 
-- **Collected Information**: View all the data collected during the call as specified in your Pearl setup.
+- **Call Information**: View all the data collected during the call as specified in your Pearl setup. see [Variables](/pages/variables)
 - **Call Transcript**: Access the full transcript of the conversation to review what was said during the call.
 - **Call Recording**: Listen to the recording of the call for a more detailed analysis.
 - **Conversation Summary**: Get a summary of the key points and outcomes of the call.
