--- a/pages/create_pearl.mdx
+++ b/pages/create_pearl.mdx
@@ -36,8 +36,7 @@ Choose the type of use case for your Pearl:
 
 1. **Opening Sentence**: Define the first sentence Pearl will say when answering the phone. You can include variables like "company name" or "agent name." Avoid using lead-specific variables for inbound calls.
 2. **Flow Script**: For use cases other than Personal Secretary, provide the script that Pearl will follow during conversations, similar to a script given to a human salesperson.
-3. **In Call Actions**: Specify actions that Pearl can perform during the call, such as booking meetings or transferring calls.
-4. **Post Call Actions**: Define actions that Pearl will perform after the call, such as sending follow-up emails or taking messages.
+3. **Call Actions**: Specify actions that Pearl can perform during the call, such as booking meetings, transferring calls or send Email and SMS.
 
 For more details on actions, refer to the [Actions](/pages/action) page.
 
