--- a/pages/introduction.mdx
+++ b/pages/introduction.mdx
@@ -3,17 +3,17 @@ title: Introduction
 description: 'Welcome to NLPearl.AI - Revolutionizing Telecommunications with Conversational AI'
 ---
 
-import { CardGroup, Card } from '/snippets';
-
 <img
   className="block dark:hidden"
-  src="/images/api_doc_white.png"
+  src="/images/banner_white.jpg"
   alt="NLPearl.AI Logo Light"
+  style={{ borderRadius: '18px' }}
 />
 <img
   className="hidden dark:block"
-  src="/images/api_doc_dark.png"
+  src="/images/banner_dark.jpg"
   alt="NLPearl.AI Logo Dark"
+  style={{ borderRadius: '18px' }}
 />
 
 ## Welcome to NLPearl.AI
