--- a/pages/outbound_api.mdx
+++ b/pages/outbound_api.mdx
@@ -3,62 +3,49 @@ title: Outbound/API
 description: 'Discover how to leverage the API for dynamic outbound activities, offering direct control over call operations and lead management.'
 ---
 
-import { CardGroup, Card } from '@theme';
-
 ## API-Driven Outbound Activities
 
 NLPearl.AI's API provides a powerful interface for developers to create and manage outbound call activities directly through code, offering complete control over the implementation and execution of these interactions.
 
-### Overview of API-Driven Outbound Activities
-
-Unlike platform-managed campaigns, API-driven activities allow for direct integration into your existing systems and workflows. This setup enables a more dynamic application of outbound call logic tailored to specific business needs, where calls can be triggered based on custom criteria defined within your application.
+API-driven activities allow you to initiate calls and manage outbound campaigns directly through your existing systems and workflows. While outbound activities can be created and scheduled on the platform, the API offers an additional layer of flexibility for triggering calls outside the predefined schedule.
 
 ### Setting Up API Outbound Activities
 
 1. **Obtain an API Key**: Secure an API key from NLPearl.AI to authenticate and interact with our outbound call API.
 
-2. **Create or Manage Outbound Activities**: Use the API to define and initiate a new outbound activity or manage an existing one created on the platform. Set parameters such as call logic, timing, and handling instructions programmatically.
+2. **Create Outbound Activities**: Use the platform to define and create an outbound activity for API use. The process is the same as creating any outbound activity managed by the platform.
 
-3. **Manage Leads Programmatically**: Integrate your existing lead management systems directly with the outbound activity. There is no need to upload leads to the platform; instead, use your databases to manage and utilize leads dynamically.
+3. **Trigger Calls via API**: Once the outbound activity is created, use the API to trigger calls independently of the platform's schedule. This allows for dynamic call initiation based on real-time application logic.
 
-### Configuring Your Outbound Calls
+### Mixed-Case Outbound Handling
 
-Configure your outbound calls with extensive customization options available through the API:
+You can manage outbound campaigns with a combination of scheduled calls from the platform and real-time calls triggered by the API. This mixed approach provides flexibility, allowing you to handle a list of leads based on a predefined schedule while also responding to immediate call requests via the API.
 
-- **Define Call Logic**: Specify the conditions under which calls should be initiated, paused, or terminated based on real-time data.
-- **Schedule and Trigger Calls**: Schedule calls or trigger them instantly based on application logic or customer interactions.
+- **Priority Handling**: API-triggered calls take precedence over scheduled calls. If there is a lead scheduled by the platform and an API call request at the same time, the API call will be initiated first.
+
+For more information about making API-triggered calls, refer to the [Make Call API Request](/api-reference/outbound/make-call) documentation.
 
 ### Handling Platform-Managed Campaigns
 
-If you decide to make calls via a campaign that is running from the platform, you will still need to handle the number of simultaneous agents. The API allows you to control and monitor these aspects to ensure efficient call management.
+While API calls can be initiated at any time, outbound campaigns managed on the platform still require you to handle the number of simultaneous agents. The API provides the flexibility to manage these aspects, ensuring efficient call handling.
 
-### API Endpoints for Outbound Calls
+### Conclusion
 
-Detailed documentation of API endpoints includes:
-
-- **POST `/outbound/create`**: Endpoint to create a new outbound activity.
-- **PUT `/outbound/update`**: Endpoint to update existing outbound settings.
-- **DELETE `/outbound/{id}`**: Endpoint to delete an outbound activity.
-
-<div className="api-endpoints-info">
-  <h3>Comprehensive API Reference:</h3>
-  <p>For complete details on each endpoint, including parameters and expected responses, refer to our API reference section.</p>
-</div>
+By combining platform-managed scheduling with API-driven call triggering, NLPearl.AI offers a flexible and powerful solution for outbound call management. Leverage the API to meet your specific needs, ensuring that your outbound communications are both dynamic and highly effective.
 
 <CardGroup cols={2}>
   <Card
     title="API Authentication"
     icon="key"
-    href="/docs/api-authentication"
+    href="/api-reference/authorization"
   >
     Learn how to obtain and manage your API key for secure API access.
   </Card>
   <Card
-    title="Advanced API Usage"
-    icon="code"
-    href="/docs/advanced-api-usage"
+    title="Make Call API Request"
+    icon="phone"
+    href="/api-reference/outbound/make-call"
   >
-    Explore advanced techniques for integrating outbound API functionalities into your systems.
+    Discover how to trigger outbound calls via the API.
   </Card>
 </CardGroup>
-
