--- a/pages/twilio_integration.mdx
+++ b/pages/twilio_integration.mdx
@@ -29,3 +29,13 @@ Ensure that the phone numbers you want to add have the necessary VoIP accessibil
 
 Integrating your Twilio account with NLPearl.AI offers a flexible and powerful way to manage your communications, providing you with the tools to streamline your operations and enhance your customer interactions.
 
+### Twilio Configuration
+
+Once you've connected your Twilio account to NLPearl, you will need to disable HTTP Basic Authentication for media access to ensure proper usage of all our functionalities. To do so, go to the "Twilio Dashboard," click on "Voice" under the left menu, select "General," scroll down to "HTTP Basic Authentication for media access," and click on "Disable."
+
+<img
+  className="block"
+  src="/images/exemples/twilio_config.jpg"
+  alt="Transfer Call Setup"
+  style={{ borderRadius: '18px' }}
+/>
