--- a/pages/variables.mdx
+++ b/pages/variables.mdx
@@ -16,7 +16,7 @@ NLPearl.AI comes with a set of built-in variables such as `firstName`, `lastName
 When creating a new variable, you need to provide the following details:
 
 - **Display Name**: This is how the variable will appear on the platform and in the call information. It’s the human-readable name of your variable.
-- **Id**: This is the unique identifier for the variable, which you will use as a key in `callData` when making an API request. The Id is automatically generated when you fill in the Display Name but can be customized.
+- **Id**: This is the unique identifier for the variable, which you will use as a key in `callData` in [Make Call API Request](/api-reference/outbound/make-call). The Id is automatically generated when you fill in the Display Name but can be customized.
 - **Type**: The data type of the variable, such as `boolean`, `float`, `int`, or `string`.
 - **Description**: This is a critical field where you describe the purpose of the variable. It’s important to fill this out wisely, especially if the variable is meant to be collected during the call.
 
@@ -24,14 +24,16 @@ When creating a new variable, you need to provide the following details:
 
 There are two main types of variables:
 
-1. **Predefined Information Variables**: These variables hold information that is known before the call and can be used as placeholders in your conversational flow.
+### 1. **Predefined Information Variables**: 
+	These variables hold information that is known before the call and can be used as placeholders in your conversational flow.
 
    #### Example Usage:
    - **Opening Sentence**: "Hello, I am `agentName` from `companyName`. How can I assist you?"
    - **Script Example**: "Ask the prospect if his name is still `firstName` `lastName`."
 
    You can also create your own variables to be used in a similar fashion. For instance, if you are selling cars, you could create variables like `Brand`, `color`, or `priceProposed`.
-
+   <br/>
+   see [Make Call API Request](/api-reference/outbound/make-call).
    #### API Request Example:
    ```json
    {
@@ -51,10 +53,11 @@ There are two main types of variables:
 	**Important:** Make sure to use the **Id** (e.g., `priceProposed`) of the variable in your API request dictionary, not the Display Name (e.g., `Price Proposed`), to ensure proper functionality.
 	   
 	   
-	   
-2. **Collected Information Variables**: These variables are used to gather information during the call that was not known beforehand. For example, you might instruct Pearl to ask the prospect what price they are willing to pay: "Ask the prospect what the `priceProposed` they want."
+<a id="collected-information-variables"></a>   
+### 2. **Collected Information Variables**:
+ These variables are used to gather information during the call that was not known beforehand. For example, you might instruct Pearl to ask the prospect what price they are willing to pay: "Ask the prospect what the `priceProposed` they want."
 
-   Once collected, this information will be displayed in the "Call Information" section on your dashboard and can also be reused in other parts of the conversation or in post-call actions like sending an SMS, email, or even in an API call.
+   Once the information is collected, it can be reused in the conversation and utilized in any actions requiring this variable. At the end of the call, it will be displayed in the "Call Information" section of the call details.
 
 ### Mixing Use Cases
 
